src/objects/LeanData__LD_Territory_Geo__c.object
<CustomObject>
    <fields>
        <fullName>LeanData__Canonical_City__c</fullName>
        <label>Canonical City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeanData__Canonical_Country__c</fullName>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeanData__Canonical_State__c</fullName>
        <label>State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeanData__City__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeanData__Country__c</fullName>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeanData__Custom_Field__c</fullName>
        <label>Custom Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeanData__LD_Territory__c</fullName>
        <label>LD Territory</label>
        <referenceTo>LeanData__LD_Territory__c</referenceTo>
        <relationshipLabel>Parent LD Territory</relationshipLabel>
        <relationshipName>ParentLDTerritory</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>LeanData__PostalCode__c</fullName>
        <label>PostalCode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeanData__State__c</fullName>
        <label>State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeanData__Version__c</fullName>
        <label>Version</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>LD Territory Geo</label>
    <nameField>
        <label>LD Territory Geo Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>LD Territory Geos</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>